# busted

./: .gitignore  Cargo.toml  DEVELOPMENT.md  LICENSE  Makefile  README.md  RELEASING.md  busted.webm  nfpm.yaml  test-tls.sh
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.githooks/: pre-commit
.github/workflows/: ci.yml  docs.yml  release.yml
busted-agent/: Cargo.toml  build.rs
busted-agent/src/: actions.rs  events.rs  file_monitor.rs  k8s.rs  lib.rs  main.rs  metrics.rs  server.rs  siem.rs  tls.rs
busted-agent/src/ml/: classifier.rs  discovery.rs  features.rs  symbol.rs  window.rs
busted-classifier/: Cargo.toml
busted-classifier/src/: fingerprint.rs  http.rs  json.rs  lib.rs  llm.rs  mcp.rs  pii.rs
busted-classifier/src/protocols/: anthropic.rs  mod.rs  openai.rs
busted-classifier/tests/: prop_classify.rs  prop_fingerprint.rs  prop_http.rs  prop_json.rs  prop_llm.rs  prop_mcp.rs  prop_pii.rs  prop_protocols.rs
busted-cli/: Cargo.toml
busted-cli/src/: cli.rs  main.rs  monitor.rs  policy.rs  tui.rs  ui.rs
busted-ebpf/: Cargo.toml
busted-ebpf/src/: main.rs
busted-embed/: Cargo.toml
busted-embed/src/: candle_backend.rs  lib.rs
busted-identity/: Cargo.toml
busted-identity/src/: action.rs  capability.rs  embedding.rs  graph.rs  identity.rs  lib.rs  narrative.rs  ngrams.rs  resolver.rs  scoring.rs  simhash.rs  store.rs  timeline.rs
busted-ml/: Cargo.toml
busted-ml/src/: classifier.rs  discovery.rs  features.rs  lib.rs  symbol.rs  window.rs
busted-ml/tests/: ml_integration.rs
busted-opa/: Cargo.toml
busted-opa/policies/: default.rego
busted-opa/src/: lib.rs
busted-opa/tests/: default_policy.rs  policy_scenarios.rs  prop_policy.rs
busted-theme/: Cargo.toml
busted-theme/src/: lib.rs
busted-tui/: Cargo.toml
busted-tui/src/: app.rs  demo.rs  event.rs  lib.rs  main.rs  socket.rs
busted-tui/src/ui/: detail.rs  events.rs  filter.rs  header.rs  help.rs  mod.rs  processes.rs  providers.rs  stats.rs  style.rs
busted-types/: Cargo.toml
busted-types/src/: lib.rs
busted-types/tests/: userspace.rs
busted-ui/: Cargo.toml  Trunk.toml  index.html
busted-ui/src/: app.rs  bridge.rs  demo.rs  lib.rs  main.rs
busted-ui/src/ui/: detail.rs  events.rs  filter.rs  header.rs  help.rs  mod.rs  processes.rs  providers.rs  stats.rs  style.rs  tabs.rs
busted-ui/src/views/: events.rs  mod.rs  policy.rs  processes.rs  providers.rs
deploy/: Dockerfile  Dockerfile.test  docker-compose.yml
deploy/helm/: test.sh
deploy/systemd/: busted.service
docs/: crates.js  help.html  index.html  settings.html  src-files.js
docs-landing/: index.html
docs/busted/: all.html  constant.LLM_ENDPOINTS.html  constant.LLM_SUBNETS.html  constant.LLM_SUBNETS_V6.html  fn.classify_llm_provider.html  fn.cli_output_consumer.html  fn.handle_event.html  fn.main.html  fn.resolve_container_id.html  fn.resolve_container_id_from_proc.html  fn.resolve_provider_ips.html  index.html  sidebar-items.js  struct.Cli.html  struct.EventOutput.html  struct.PidStats.html
docs/busted_agent/: all.html  fn.run_agent.html  index.html  sidebar-items.js  struct.AgentConfig.html
docs/busted_classifier/: all.html  enum.ContentClass.html  enum.Direction.html  enum.Protocol.html  fn.classify.html  index.html  sidebar-items.js  struct.Classification.html
docs/busted_embed/: all.html  constant.EMBEDDING_DIM.html  constant.MODEL_ID.html  constant.MODEL_REVISION.html  index.html  sidebar-items.js  struct.Embedder.html
docs/busted_identity/: all.html  index.html  sidebar-items.js  struct.IdentityTracker.html  struct.TrackerConfig.html
docs/busted_ml/: all.html  enum.BehaviorClass.html  index.html  sidebar-items.js  struct.BehaviorIdentity.html  struct.MlClassifier.html
docs/busted_opa/: all.html  enum.Action.html  index.html  sidebar-items.js  struct.PolicyDecision.html  struct.PolicyEngine.html
docs/busted_theme/: all.html  constant.ACCENT.html  constant.ACCENT_DIM.html  constant.ALLOW.html  constant.AUDIT.html  constant.BG.html  constant.BORDER.html  constant.BRIGHT_TEXT.html  constant.DENY.html  constant.DIM_TEXT.html  constant.FILE_ACCESS.html  constant.FILE_DATA.html  constant.HOVER_BG.html  constant.MCP.html  constant.NETWORK.html  constant.NORMAL_TEXT.html  constant.PII.html  constant.PII_ROW_BG.html  constant.PROMPT.html  constant.RESPONSE.html  constant.ROUNDING.html  constant.SELECTED_BG.html  constant.SURFACE.html  constant.SURFACE_2.html  constant.TOOL.html  fn.action_color.html  fn.pill_bg.html  fn.policy_color.html  fn.tint.html  index.html  sidebar-items.js  type.Rgb.html
docs/busted_tui/: all.html  fn.run_tui.html  index.html  sidebar-items.js  struct.TuiConfig.html
docs/busted_types/: all.html  constant.CGROUP_PATH_LEN.html  constant.CONTAINER_ID_LEN.html  constant.FILE_DATA_MAX.html  constant.FILE_PATH_MAX.html  constant.SNI_MAX_LEN.html  constant.TASK_COMM_LEN.html  constant.TLS_PAYLOAD_MAX.html  enum.AddressFamily.html  enum.EventType.html  enum.LlmProvider.html  enum.PolicyDecision.html  index.html  sidebar-items.js  struct.AgentIdentity.html  struct.FileAccessEvent.html  struct.FileDataEvent.html  struct.NetworkEvent.html  struct.TlsConnKey.html  struct.TlsDataEvent.html  struct.TlsHandshakeEvent.html  union.IpAddress.html
docs/busted_ui/: all.html  constant.SOCKET_PATH.html  fn.main.html  fn.run_ui.html  index.html  sidebar-items.js  struct.UiConfig.html
docs/search.index/: 001b3a94ade4.js  001d52b4cb13.js  00508b73a718.js  007b0e6580ce.js  008048437834.js  00cf4d1e668d.js  00ebc16cec9b.js  00ef5b52fdc9.js  00f7892c3b1d.js  01253467348a.js  015da4b8aed4.js  016eaee16106.js  01b499a51c48.js  01dd104b33d4.js  01e0245ca763.js  023abac889e8.js  0280c861f6aa.js  02d9940a6532.js  02e33deba6ab.js  02ebede57a3b.js  0321d7dbbd20.js  035abde7afd2.js  038e38816f5e.js  03f9d7b8e279.js  04521cd76bd1.js  04872e9b14e5.js  04897633275c.js  04af729b0d11.js  04b22f901aef.js  04d2203dab43.js  051dde95c44c.js  05359c37a6b5.js  05966551b7fe.js  (+739 more)
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/tests/: helm_chart.rs  helm_integration.rs
(+567 files in other folders)
