[workspace]
resolver = "2"
members = [
    "busted-types",
    "busted-ebpf",
    "busted-agent",
    "busted-classifier",
    "busted-ml",
    "busted-ui",
    "xtask",
]
# busted-ebpf must be built separately for bpfel-unknown-none via `cargo xtask build`
default-members = [
    "busted-types",
    "busted-agent",
    "busted-classifier",
    "busted-ml",
    "busted-ui",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Barak Bercovitz <barakber@gmail.com>"]
repository = "https://github.com/barakber/busted"

[workspace.dependencies]
# Shared dependencies across crates
aya = { version = "0.13", features = ["async_tokio"] }
aya-log = "0.2"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# eBPF dependencies
aya-ebpf = "0.1"
aya-log-ebpf = "0.1"

[profile.dev]
opt-level = 0

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

# Profile for eBPF programs - needs high optimization even in dev mode
[profile.dev.package.busted-ebpf]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false

[profile.release.package.busted-ebpf]
opt-level = 3
codegen-units = 1
