[package]
name = "busted-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "busted"
path = "src/main.rs"

[dependencies]
aya = { workspace = true }
aya-log = { workspace = true }
busted-types = { path = "../busted-types", features = ["user"] }
tokio = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
libc = "0.2.180"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
kube = { version = "0.98", features = ["runtime", "derive"], optional = true }
k8s-openapi = { version = "0.24", features = ["latest"], optional = true }
ndarray = { version = "0.15", optional = true }
linfa = { version = "0.7", optional = true }
linfa-trees = { version = "0.7", optional = true }
hdbscan = { version = "0.12", optional = true }
rand = { version = "0.8", optional = true }

[features]
k8s = ["dep:kube", "dep:k8s-openapi"]
ml = ["dep:ndarray", "dep:linfa", "dep:linfa-trees", "dep:hdbscan", "dep:rand"]
tls = []

[build-dependencies]
