[package]
name = "busted-agent"
description = "eBPF-based LLM/AI communication monitoring agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "busted"
path = "src/main.rs"

[dependencies]
aya = { workspace = true }
aya-log = { workspace = true }
busted-types = { path = "../busted-types", features = ["user"] }
busted-classifier = { path = "../busted-classifier" }
tokio = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
libc = "0.2.180"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
kube = { version = "0.98", features = ["runtime", "derive"], optional = true }
k8s-openapi = { version = "0.24", features = ["latest"], optional = true }
busted-ml = { path = "../busted-ml", optional = true }
busted-opa = { path = "../busted-opa", optional = true }
metrics = { version = "0.24", optional = true }
metrics-exporter-prometheus = { version = "0.16", optional = true }

[features]
k8s = ["dep:kube", "dep:k8s-openapi"]
ml = ["dep:busted-ml"]
opa = ["dep:busted-opa"]
tls = []
prometheus = ["dep:metrics", "dep:metrics-exporter-prometheus"]

[build-dependencies]
