[package]
name = "busted-agent"
description = "eBPF-based LLM/AI communication monitoring agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["ebpf", "llm", "monitoring", "agent", "ai"]
categories = ["network-programming"]

[lib]
name = "busted_agent"
path = "src/lib.rs"

[[bin]]
name = "busted-agent"
path = "src/main.rs"

[dependencies]
aya = { workspace = true }
aya-log = { workspace = true }
busted-types = { version = "0.1.0", path = "../busted-types", features = ["user"] }
busted-classifier = { version = "0.1.0", path = "../busted-classifier" }
tokio = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
libc = "0.2.180"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
kube = { version = "0.98", features = ["runtime", "derive"], optional = true }
k8s-openapi = { version = "0.24", features = ["latest"], optional = true }
busted-ml = { version = "0.1.0", path = "../busted-ml", optional = true }
busted-identity = { version = "0.1.0", path = "../busted-identity", optional = true }
busted-opa = { version = "0.1.0", path = "../busted-opa", optional = true }
rustls = { version = "0.23", features = ["ring"], optional = true }
metrics = { version = "0.24", optional = true }
metrics-exporter-prometheus = { version = "0.16", optional = true }

[features]
k8s = ["dep:kube", "dep:k8s-openapi", "dep:rustls"]
ml = ["dep:busted-ml"]
identity = ["dep:busted-identity"]
identity-semantic = ["identity", "busted-identity?/semantic"]
identity-persist = ["identity", "busted-identity?/persist"]
identity-graph = ["identity", "busted-identity?/graph"]
identity-full = ["identity", "busted-identity?/full"]
opa = ["dep:busted-opa"]
tls = []
prometheus = ["dep:metrics", "dep:metrics-exporter-prometheus"]

[build-dependencies]
cargo_metadata = { workspace = true }
serde_json = { workspace = true }
