[package]
name = "busted"
description = "eBPF-based LLM/AI communication monitoring tool"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["ebpf", "llm", "monitoring", "cli", "ai"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "busted"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde_json = { workspace = true }
busted-agent = { version = "0.1.0", path = "../busted-agent", optional = true }
busted-ui = { version = "0.1.0", path = "../busted-ui", optional = true }
busted-opa = { version = "0.1.0", path = "../busted-opa", optional = true }
busted-types = { version = "0.1.0", path = "../busted-types", features = ["user"] }
tokio = { workspace = true }

[features]
default = ["monitor", "policy"]
monitor = ["dep:busted-agent"]
ui = ["dep:busted-ui"]
policy = ["dep:busted-opa"]
full = ["monitor", "ui", "policy", "tls", "opa", "ml", "k8s", "prometheus", "identity"]
# Pass-through features for busted-agent
k8s = ["busted-agent?/k8s"]
ml = ["busted-agent?/ml"]
tls = ["busted-agent?/tls"]
identity = ["busted-agent?/identity"]
opa = ["busted-agent?/opa"]
prometheus = ["busted-agent?/prometheus"]
