[package]
name = "busted-ebpf"
description = "eBPF kernel probes for LLM/AI communication monitoring"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[dependencies]
aya-ebpf.workspace = true
aya-ebpf-bindings = "0.1.2"
aya-log-ebpf.workspace = true
busted-types = { path = "../busted-types" }

[build-dependencies]

[[bin]]
name = "busted-ebpf"
path = "src/main.rs"
test = false
bench = false
