[package]
name = "busted-embed"
description = "Text embedding for AI agent identity fingerprinting"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["embedding", "llm", "identity", "ai", "candle"]
categories = ["science"]

[dependencies]
log = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }

# Candle backend (pure Rust, no ONNX runtime needed)
candle-core = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }
candle-transformers = { version = "0.9", optional = true }
hf-hub = { version = "0.4", optional = true }
tokenizers = { version = "0.22", optional = true, default-features = false, features = ["fancy-regex"] }

[features]
default = ["candle"]
candle = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:hf-hub",
    "dep:tokenizers",
]
