[package]
name = "busted-identity"
description = "Cross-event AI agent identity resolution and timeline tracking"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["llm", "identity", "agent", "monitoring", "ai"]
categories = ["network-programming"]

[dependencies]
busted-types = { version = "0.1.0", path = "../busted-types", features = ["user"] }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Optional dependencies for advanced features
busted-embed = { version = "0.1.0", path = "../busted-embed", optional = true }
redb = { version = "3.1", optional = true }
bincode = { version = "1", optional = true }
petgraph = { version = "0.8", features = ["serde-1"], optional = true }

[features]
default = []
semantic = ["dep:busted-embed"]
persist = ["dep:redb", "dep:bincode"]
graph = ["dep:petgraph"]
full = ["semantic", "persist", "graph"]
