[package]
name = "busted-ml"
description = "ML behavioral traffic classifier for LLM communication patterns"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["machine-learning", "llm", "traffic-analysis", "classification", "ai"]
categories = ["science", "network-programming"]

[dependencies]
busted-types = { path = "../busted-types", features = ["user"] }
ndarray = "0.15"
linfa = "0.7"
linfa-trees = "0.7"
hdbscan = "0.12"
rand = "0.8"
log = { workspace = true }
serde = { workspace = true }
