[package]
name = "busted-opa"
description = "OPA/Rego policy engine for LLM communication governance"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["opa", "rego", "policy", "llm", "security"]
categories = ["network-programming", "config"]

[dependencies]
regorus = "0.9"
busted-types = { version = "0.1.0", path = "../busted-types", features = ["user"] }
serde_json = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
tempfile = "3"
proptest = "1"
