[package]
name = "busted-types"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
aya = { version = "0.13", optional = true, default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
user = ["aya", "serde"]

[lib]
path = "src/lib.rs"
