[package]
name = "busted-types"
description = "Shared types for the Busted eBPF LLM/AI monitoring system"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["ebpf", "llm", "monitoring", "types", "ai"]
categories = ["network-programming", "data-structures"]

[dependencies]
aya = { version = "0.13", optional = true, default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0"

[features]
default = []
user = ["aya", "serde"]

[lib]
path = "src/lib.rs"
