[package]
name = "busted-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "busted-ui"
path = "src/main.rs"

[dependencies]
eframe = "0.31"
egui = "0.31"
egui_extras = "0.31"
tokio = { version = "1.35", features = ["rt", "net", "io-util", "sync", "macros"] }
serde = { workspace = true }
serde_json = { workspace = true }
busted-types = { path = "../busted-types", features = ["user"] }
