[package]
name = "busted-ui"
description = "GUI dashboard for the Busted LLM/AI monitoring system"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[lib]
name = "busted_ui"
path = "src/lib.rs"

[[bin]]
name = "busted-ui"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.33", default-features = true, features = ["glow"] }
egui_extras = { version = "0.33", features = ["syntect"] }
busted-types = { version = "0.1.0", path = "../busted-types", default-features = false, features = ["user-no-aya"] }
busted-theme = { version = "0.1.0", path = "../busted-theme" }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.35", features = ["rt-multi-thread", "net", "io-util", "sync", "macros", "time"] }
env_logger = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
web-sys = "0.3"
web-time = "1.1"
js-sys = "0.3"
